--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,1 @@
-# Ignore Python cache files
-__pycache__/
-# Ignore Django migration files
-*/migrations/*
-*/migrations/* >> .gitignore/migrations/__init__.py
-
+.env
