--- a/requirements.txt
+++ b/requirements.txt
@@ -10,5 +10,6 @@ pathspec==0.12.1
 pillow==10.4.0
 platformdirs==4.2.2
 psycopg2==2.9.9
+python-decouple==3.8
 sqlparse==0.5.1
 typing_extensions==4.12.2
