--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,28 @@
 asgiref==3.8.1
 asttokens==2.4.1
 black==24.4.2
+cachetools==5.4.0
+certifi==2024.7.4
+charset-normalizer==3.3.2
 click==8.1.7
 decorator==5.1.1
 dj-database-url==2.2.0
 Django==5.0.7
 executing==2.0.1
+google-api-core==2.19.1
+google-api-python-client==2.140.0
+google-auth==2.33.0
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.1
+googleapis-common-protos==1.63.2
 gunicorn==22.0.0
+httplib2==0.22.0
+idna==3.7
 ipython==8.26.0
 jedi==0.19.1
 matplotlib-inline==0.1.7
 mypy-extensions==1.0.0
+oauthlib==3.2.2
 packaging==24.1
 parso==0.8.4
 pathspec==0.12.1
@@ -18,16 +30,25 @@ pexpect==4.9.0
 pillow==10.4.0
 platformdirs==4.2.2
 prompt_toolkit==3.0.47
+proto-plus==1.24.0
+protobuf==5.27.3
 psycopg2==2.9.9
 psycopg2-binary==2.9.9
 ptyprocess==0.7.0
 pure_eval==0.2.3
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
 Pygments==2.18.0
+pyparsing==3.1.2
 python-decouple==3.8
+requests==2.32.3
+requests-oauthlib==2.0.0
+rsa==4.9
 six==1.16.0
 sqlparse==0.5.1
 stack-data==0.6.3
 traitlets==5.14.3
 typing_extensions==4.12.2
+uritemplate==4.1.1
+urllib3==2.2.2
 wcwidth==0.2.13
-
